crates/uitest/fixtures/ty_check/error_attr_empty_form.snap
---
source: crates/uitest/tests/ty_check.rs
expression: diags
input_file: fixtures/ty_check/error_attr_empty_form.fe
---
error[12-0002]: invalid `#[error]` attribute form on struct `BadForm`
  ┌─ error_attr_empty_form.fe:1:1
  │
1 │ #[error()]
  │ ^^^^^^^^^^ expected `#[error]`
